Come on - almost nap time

--- a/1 Preprocess/Merge Data/1.1.1 IM - Create Dataset.ipynb
+++ b/1 Preprocess/Merge Data/1.1.1 IM - Create Dataset.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 17,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 18,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 19,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -46,62 +46,112 @@
           "output_type": "stream",
           "text": [
             "            Butanol\n",
-            "count  54701.000000\n",
-            "mean       9.488080\n",
-            "std       10.129287\n",
+            "count  48064.000000\n",
+            "mean       9.785834\n",
+            "std       10.160568\n",
             "min        0.000000\n",
-            "25%        3.576670\n",
-            "50%        5.660690\n",
-            "75%       10.596500\n",
-            "max       58.462500\n",
-            "         425_pct_Al       M_Value    C4_pct_Eth    C4_pct_H2O    C4_pct_Hex  \\\n",
-            "count  54701.000000  54701.000000  54701.000000  54701.000000  54701.000000   \n",
-            "mean       6.112585      3.604727      1.274751     20.756120      0.461296   \n",
-            "std        0.316357      0.174484      0.677977      2.860161      0.240577   \n",
-            "min        0.155707      1.439690      0.086632      7.823650      0.000321   \n",
-            "25%        5.987840      3.506770      0.675095     18.331100      0.342154   \n",
-            "50%        6.130510      3.595760      1.291060     20.730400      0.436250   \n",
-            "75%        6.270270      3.696080      1.719570     22.988000      0.533348   \n",
-            "max        8.058320      5.831770      9.089020     33.941500      3.190340   \n",
+            "25%        3.832595\n",
+            "50%        5.908670\n",
+            "75%       10.990000\n",
+            "max       59.010000\n",
+            "         425_pct_Al       M_Value    C4_pct_Eth    C4_pct_H2O  \\\n",
+            "count  48064.000000  48064.000000  48064.000000  48064.000000   \n",
+            "mean       6.121527      3.598034      1.246364     21.103333   \n",
+            "std        0.310173      0.180238      0.720948      2.763381   \n",
+            "min        0.155707      1.346790      0.086632      7.823650   \n",
+            "25%        5.991420      3.500708      0.642266     18.737475   \n",
+            "50%        6.131130      3.590000      1.195790     21.332700   \n",
+            "75%        6.274265      3.688767      1.697302     23.248450   \n",
+            "max        8.058320      5.831770      9.844330     34.362400   \n",
             "\n",
-            "       HydWtr_pct_Ammonia   HydWtr_Na2O  \n",
-            "count        54701.000000  54701.000000  \n",
-            "mean             0.969408      0.795339  \n",
-            "std              0.145064      0.742506  \n",
-            "min              0.382206     -0.250784  \n",
-            "25%              0.877625      0.408837  \n",
-            "50%              0.942500      0.639177  \n",
-            "75%              1.036550      0.989657  \n",
-            "max              1.602890     14.146500  \n",
-            "            DI55152       FC55003       FC55552       FC55569      FFC55553  \\\n",
-            "count  54701.000000  54701.000000  54701.000000  54701.000000  54701.000000   \n",
-            "mean       0.944166   5946.347050  36128.625336   6598.149495      0.993519   \n",
-            "std        0.042786    848.109486   4364.512991    375.262486      0.040433   \n",
-            "min        0.814998   2847.690000  18784.400000   5167.950000      0.811764   \n",
-            "25%        0.915440   5408.930000  34995.400000   6361.510000      0.969966   \n",
-            "50%        0.939253   5961.280000  37900.800000   6579.880000      0.991736   \n",
-            "75%        0.965451   6513.970000  38975.800000   6812.210000      1.012700   \n",
-            "max        1.065410   9052.540000  46356.900000   8064.910000      1.170060   \n",
+            "       HydWtr_pct_Ammonia  \n",
+            "count        48064.000000  \n",
+            "mean             0.967209  \n",
+            "std              0.146912  \n",
+            "min              0.360178  \n",
+            "25%              0.875875  \n",
+            "50%              0.939325  \n",
+            "75%              1.030030  \n",
+            "max              1.617070  \n",
+            "           AYC55580       DI55102       DI55152       DI55580       FC42428  \\\n",
+            "count  48064.000000  48064.000000  48064.000000  48064.000000  48064.000000   \n",
+            "mean      11.363177      0.938292      0.936531      0.998257  36151.561639   \n",
+            "std        4.850976      0.059909      0.034358      0.051217   5139.441714   \n",
+            "min       -3.055680      0.794118      0.824670      0.841696  17165.500000   \n",
+            "25%        9.775320      0.906156      0.913999      0.965028  34747.850000   \n",
+            "50%       10.805350      0.947357      0.935493      0.997964  37970.750000   \n",
+            "75%       13.970725      0.983124      0.955312      1.033820  39457.650000   \n",
+            "max       25.501300      1.059180      1.048640      1.140980  49959.600000   \n",
             "\n",
-            "           FFC55555       LC55555       PI55004       TC55552       TC55555  \\\n",
-            "count  54701.000000  54701.000000  54701.000000  54701.000000  54701.000000   \n",
-            "mean       0.774490     58.559324      2.277400    168.496619    180.976137   \n",
-            "std        0.023237     10.559024      1.216107     14.991007      1.472814   \n",
-            "min        0.694477     27.970000      0.000000    120.095000    175.660000   \n",
-            "25%        0.759725     49.847800      1.309010    156.065000    179.968000   \n",
-            "50%        0.778422     60.106700      2.031050    171.875000    180.125000   \n",
-            "75%        0.789997     67.834500      3.069910    180.438000    181.989000   \n",
-            "max        0.855530     86.581300      6.333520    213.521000    186.453000   \n",
+            "            FC55003       FC55009       FC55102       FC55152       FC55552  \\\n",
+            "count  48064.000000  48064.000000  48064.000000  48064.000000  48064.000000   \n",
+            "mean    5952.978185    848.220753  44526.824994  40417.323864  36340.104550   \n",
+            "std      847.683897    610.037366   6168.162983   5459.963811   4275.391282   \n",
+            "min     2807.760000      0.000000  20368.700000  18860.700000  18558.800000   \n",
+            "25%     5424.630000    320.318250  41409.300000  38485.600000  35062.075000   \n",
+            "50%     5973.450000    834.348500  45887.700000  41477.500000  37960.000000   \n",
+            "75%     6522.630000   1323.710000  48543.450000  43732.800000  39017.500000   \n",
+            "max     9070.260000   2670.920000  62848.200000  57371.200000  52000.000000   \n",
             "\n",
-            "            TI55021  \n",
-            "count  54701.000000  \n",
-            "mean     223.246018  \n",
-            "std        9.112922  \n",
-            "min      203.373000  \n",
-            "25%      217.853000  \n",
-            "50%      220.873000  \n",
-            "75%      224.728000  \n",
-            "max      256.710000  \n"
+            "            FC55555       FC55569       FC55576      FFC55553      FFC55555  \\\n",
+            "count  48064.000000  48064.000000  48064.000000  48064.000000  48064.000000   \n",
+            "mean   28104.100489   6596.276391    380.872724      0.998268      0.773248   \n",
+            "std     3419.828722    362.422636    259.029411      0.036746      0.022350   \n",
+            "min    14012.100000   5145.140000      0.000000      0.815578      0.694477   \n",
+            "25%    27282.375000   6379.000000    203.479250      0.972384      0.759308   \n",
+            "50%    29231.100000   6577.465000    350.728000      0.997870      0.776544   \n",
+            "75%    30205.850000   6805.180000    565.299250      1.018792      0.789198   \n",
+            "max    34638.100000   8070.910000   1176.810000      1.170060      0.850961   \n",
+            "\n",
+            "           FYC55553       LC55553       LC55555       LC55557       LC55568  \\\n",
+            "count  48064.000000  48064.000000  48064.000000  48064.000000  48064.000000   \n",
+            "mean   36234.197955     63.329273     57.081414     69.431922     41.143177   \n",
+            "std     4176.239735      7.156869     10.037618      2.810757      1.498108   \n",
+            "min    18110.900000     41.918300     27.970000     60.351700     32.192200   \n",
+            "25%    34881.850000     59.578950     47.263450     67.117900     40.742375   \n",
+            "50%    37538.800000     65.397850     59.943700     70.031500     41.234850   \n",
+            "75%    38838.475000     68.206550     65.086750     71.619725     41.599000   \n",
+            "max    46156.700000     82.753500     79.033400     78.119700     49.420800   \n",
+            "\n",
+            "            LC90366       LC90368       PI55004       PI55020       PI55560  \\\n",
+            "count  48064.000000  48064.000000  48064.000000  48064.000000  48064.000000   \n",
+            "mean      46.508861     37.532827      2.183574     -1.523616      0.978657   \n",
+            "std       28.725663     20.215792      1.166487      1.116584      0.991547   \n",
+            "min        0.000000      0.006367      0.001366     -4.856830     -2.094890   \n",
+            "25%       22.035575     21.661050      1.262065     -2.386153      0.206120   \n",
+            "50%       48.833400     43.461900      1.922580     -1.532940      0.746700   \n",
+            "75%       76.796700     52.770625      2.940780     -0.512644      1.657118   \n",
+            "max       87.901600     81.210800      6.299380      1.983020      4.467930   \n",
+            "\n",
+            "            TC55552       TC55553       TC55555       TC55566       TI40050  \\\n",
+            "count  48064.000000  48064.000000  48064.000000  48064.000000  48064.000000   \n",
+            "mean     168.616937    181.290465    181.008748    197.163834     73.315504   \n",
+            "std       15.352568     28.041787      1.515823     12.953080     15.320339   \n",
+            "min      119.683000    110.534000    175.746000    156.727000     27.200000   \n",
+            "25%      155.332000    161.451000    179.965000    185.858000     62.505400   \n",
+            "50%      172.531000    175.799000    180.125000    200.039000     76.556250   \n",
+            "75%      180.858250    196.687250    182.027000    205.077000     84.896025   \n",
+            "max      202.625000    246.047000    186.584000    227.835000    118.700000   \n",
+            "\n",
+            "            TI52014       TI55013       TI55014       TI55015       TI55016  \\\n",
+            "count  48064.000000  48064.000000  48064.000000  48064.000000  48064.000000   \n",
+            "mean     129.077874    200.789109    197.065824    194.719423    190.094731   \n",
+            "std       11.973351     17.680867     13.726206     13.604169      9.159624   \n",
+            "min       91.769900    161.963000    167.953000    161.407000    164.278000   \n",
+            "25%      120.655750    186.294250    186.099750    184.028750    182.823750   \n",
+            "50%      129.614500    199.092000    195.789000    193.494500    189.006000   \n",
+            "75%      138.056250    210.519000    204.229250    202.010250    194.924000   \n",
+            "max      163.594000    241.383000    228.072000    227.543000    213.986000   \n",
+            "\n",
+            "            TI55017       TI55021       TI55023  \n",
+            "count  48064.000000  48064.000000  48064.000000  \n",
+            "mean     186.024059    223.081652    218.300526  \n",
+            "std        9.817368      9.611556      3.614977  \n",
+            "min      159.678000    207.365000    206.266000  \n",
+            "25%      178.739750    217.585000    215.524000  \n",
+            "50%      185.013000    220.385000    217.590000  \n",
+            "75%      191.763500    223.934000    220.830000  \n",
+            "max      211.356000    257.805000    231.161000  \n"
           ]
         }
       ],
@@ -113,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -134,7 +184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -145,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
@@ -166,7 +216,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -174,11 +224,16 @@
           "output_type": "stream",
           "text": [
             "Index(['Date', 'Butanol'], dtype='object')\n",
-            "Index(['Date', 'DI55152', 'FC55003', 'FC55552', 'FC55569', 'FFC55553',\n",
-            "       'FFC55555', 'LC55555', 'PI55004', 'TC55552', 'TC55555', 'TI55021'],\n",
+            "Index(['Date', 'AYC55580', 'DI55102', 'DI55152', 'DI55580', 'FC42428',\n",
+            "       'FC55003', 'FC55009', 'FC55102', 'FC55152', 'FC55552', 'FC55555',\n",
+            "       'FC55569', 'FC55576', 'FFC55553', 'FFC55555', 'FYC55553', 'LC55553',\n",
+            "       'LC55555', 'LC55557', 'LC55568', 'LC90366', 'LC90368', 'PI55004',\n",
+            "       'PI55020', 'PI55560', 'TC55552', 'TC55553', 'TC55555', 'TC55566',\n",
+            "       'TI40050', 'TI52014', 'TI55013', 'TI55014', 'TI55015', 'TI55016',\n",
+            "       'TI55017', 'TI55021', 'TI55023'],\n",
             "      dtype='object')\n",
             "Index(['Date', '425_pct_Al', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O',\n",
-            "       'C4_pct_Hex', 'HydWtr_pct_Ammonia', 'HydWtr_Na2O'],\n",
+            "       'HydWtr_pct_Ammonia'],\n",
             "      dtype='object')\n"
           ]
         }
@@ -191,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -212,7 +267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -240,7 +295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -259,7 +314,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -292,7 +347,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
@@ -314,7 +369,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -326,7 +381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
@@ -340,7 +395,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\saust\\AppData\\Local\\Temp\\ipykernel_83912\\2705700377.py:73: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+            "C:\\Users\\saust\\AppData\\Local\\Temp\\ipykernel_113672\\2705700377.py:73: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
             "  results = results.append(iteration_results, ignore_index=True)\n"
           ]
         }
@@ -431,7 +486,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -441,7 +496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [],
       "source": [
